--- a/web/index.html
+++ b/web/index.html
@@ -34,5 +34,7 @@
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBA7rHoiXo-5TCcYghTBIXxhN6D9YqAdEE"></script>
+
 </body>
 </html>
